tests/baselines/reference/parser_duplicateLabel2.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/LabeledStatements/parser_duplicateLabel2.ts(3,3): error TS1114: Duplicate label 'target'.


==== tests/cases/conformance/parser/ecmascript5/Statements/LabeledStatements/parser_duplicateLabel2.ts (1 errors) ====
    target:
    while (true) {
      target:
      ~~~~~~
!!! error TS1114: Duplicate label 'target'.
      while (true) {
      }
    }